--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,15 @@
-<div style="height:10rem; background-color: blue;border-radius: 1rem; margin: 2rem">
+<div style="text-align: center">
+
+    <div class = .SELF Engineering_footer_button>
+        <span>공지사항</span>
+        <span>제휴문의</span>
+        <span>서비스소개</span>
+    </div>
+
+    <div>
+
+    </div>
+
+
 
 </div>
