--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,15 @@
-<div style="height:10rem; background-color: blue; border-radius: 1rem; margin: 2rem">
+<div style="text-align : center">
+
+    <div class = .SELF Engineering_header_logo>
+        <h1>SELF Engineering</h1>
+    </div>
+
+
+    <div class = .SELF Engineering_header_button>
+        <span>nav1</span>
+        <span>nav2</span>
+        <span>nav3</span>
+    </div>
+
 
 </div>
