7/1 5th class commit

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,11 @@
 <div style="text-align : center">
 
-    <div class = .SELF Engineering_header_logo>
+    <div class ="Engineering_header_logo">
         <h1>SELF Engineering</h1>
     </div>
 
 
-    <div class = .SELF Engineering_header_button>
+    <div class = "Engineering_header_button">
         <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
