--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <div style="text-align: center">
 
-    <div class = .SELF Engineering_footer_button>
+    <div class="Engineering_footer_button">
         <span>공지사항</span>
         <span>제휴문의</span>
         <span>서비스소개</span>
