--- a/accountapp/templates/accountapp/Hello_world.html
+++ b/accountapp/templates/accountapp/Hello_world.html
@@ -1,29 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <style>
 
-            .testing{
-                background-color: yellow;
-                height: 48px;
-                width: 48px;
-                margin: 1rem;
-                border-radius: .5rem;
-                font-size: 1rem;
-            }
-    </style>
 
-    <div style="height:20rem; background-color: blue;border-radius: 1rem; margin: 2rem">
-        <h1>
-            TEST
-        </h1>
-            <div class="testing" style='display: block'>block</div>
-            <div class="testing" style='display: inline'>inline</div>
-            <div class="testing" style='display: inline-block; width : 3rem; height: 3rem'>block</div>
-            <div class="testing" style='display: inline-block; width : 3em; height: 3em'>block</div>
-            <div class="testing" style='display: inline-block; width : 30%; height: 30%'>block</div>
-            <div class="testing" style='display: none'>none</div>
-            <div class="testing">default</div>
+    <div style="margin: 2rem; text-align: center">
+        <h1>METHOD</h1>
+
+        <form action="/accounts/hello_world/" method="post">
+            {% csrf_token %}
+            <input class="btn btn-dark rounded-pill px-4" type ="submit">
+
+        </form>
+
+        <h3>{{ text }}</h3>
+
+
     </div>
 
 {% endblock %}
