--- a/accountapp/templates/accountapp/Hello_world.html
+++ b/accountapp/templates/accountapp/Hello_world.html
@@ -8,11 +8,15 @@
 
         <form action="/accounts/hello_world/" method="post">
             {% csrf_token %}
+            <input type = "text" name = "hello_world_input">
             <input class="btn btn-dark rounded-pill px-4" type ="submit">
 
         </form>
+        {% if hello_world_output %}
 
-        <h3>{{ text }}</h3>
+        <h3>{{ hello_world_ouput.text }}</h3>
+
+        {% endif %}
 
 
     </div>
