7/1 5th class commit

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,15 +1,10 @@
-<div style="text-align: center">
-
-    <div class="Engineering_footer_button">
+<div class= "Engineering_footer_all">
+    <div class= "Engineering_footer_1">
         <span>공지사항</span>
         <span>제휴문의</span>
         <span>서비스소개</span>
     </div>
 
     <div>
-
     </div>
-
-
-
 </div>
