7/1 5th class commit

--- a/templates/header.html
+++ b/templates/header.html
@@ -6,8 +6,6 @@
 
 
     <div class = "Engineering_header_2">
-        <span>nav1</span>
-        <span>nav2</span>
         {% if not user.is_authenticated%}  <!--로그인 했을시에는 로그아웃,-->
 
         <span>
@@ -20,10 +18,16 @@
                 Sign up
             </a>
         </span>
+
         {% else %}
         <span>
+            <a href = "{% url 'accountapp:detail' pk=user.pk %}">
+                My page
+            </a>
+        </span>
+        <span>
             <a href = "{% url 'accountapp:logout' %}">
-
+                Logout
             </a>
         </span>
         {% endif %}
