--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -10,7 +10,7 @@
             <form action = "{%  url 'accountapp:login' %}" method ="post">
                 {% csrf_token %}
                 {%  bootstrap_form form %}
-                <div>class = "m-5"</div>
+                <div class = "m-5"></div>
                 <input type = "submit"
                        class = "btn btn-dark rounded-pill px-5"
         </div>
