--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -10,7 +10,7 @@
             <form action = "{%  url 'accountapp:update' pk='target_user' %}" method ="post"> <!--어떤 주소로 요청을 보낼지-->
                 {% csrf_token %}
                 {% bootstrap_form form %}
-                <div>class = "m-5"</div>
+                <div class = "m-5"></div>
                 <input type = "submit"
                        class = "btn btn-dark rounded-pill px-5">
             </form>
