--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -2,8 +2,19 @@
 {% block content %}
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
-            <h4>{{ target_user.username }}</h4>
+            {% if target_user.profile %}
+            <img src = "{{ target_user.profile.image.url }}"
+                 class="profile image m-4"
+                 alt="profile image">
+            <h4 class = "NMS_B">{{ target_user.username }}</h4>
+            <h5>{{ target_user.username }}</h5>
         </div>
+            {% else %}
+        <h4>
+            <a href = "{% url 'profileapp:create' %}">
+                Create Profile
+        </h4>
+        {% endif %}
         <div>
             {{ target_user.date_joined }}
         </div>
