--- a/static/base.css
+++ b/static/base.css
@@ -26,3 +26,12 @@
     padding : 1rem 1.5rem;
 
 }
+.profile image{
+    height : 12rem;
+    width : 12rem;
+    border-radius: 20rem;
+    object-fit: cover;
+}
+.NMS_B{
+    font-family: "NanumSquareB", cursive;
+}
