--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -4,9 +4,14 @@
         <div class="m-5">
             {% if target_user.profile %}
             <img src = "{{ target_user.profile.image.url }}"
-                 class="profile image m-4"
+                 class="profile_image m-4"
                  alt="profile image">
-            <h4 class = "NMS_B">{{ target_user.username }}</h4>
+            <h2 class = "NMS_B">
+                {{ target_user.profile.nickname }}
+                <a href = "{% url 'profileapp:update' pk=target_user.profile.pk %}">
+                    edit
+                </a>
+            </h2>
             <h5>{{ target_user.username }}</h5>
         </div>
             {% else %}
