--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -23,17 +23,16 @@
                 Create Profile
         </h4>
         {% endif %}
-        <div>
-            {{ target_user.date_joined }}
-        </div>
         {% if user == target_user %}
         <div>
-            <a href= "{% url 'accountapp:update' pk=target_user.pk %}">
-            Update Info
+            <a href= "{% url 'accountapp:update' pk=target_user.pk %}"
+            class = 'material-icons round_button mx-2'>
+            settings
             </a> <!--pk 고유값?-->
 
-            <a href= "{% url 'accountapp:delete' pk=target_user.pk %}">
-            Quit
+            <a href= "{% url 'accountapp:delete' pk=target_user.pk %}"
+            class = 'material-icons round_button mx-2'>
+            close
             </a>
 
         </div>
