--- a/articleapp/templates/articleapp/update.html
+++ b/articleapp/templates/articleapp/update.html
@@ -4,10 +4,10 @@
 {% block content%}
     <div class = "text-center mw-500 m-auto">
         <div class = "m-5">
-            <h4>Create article</h4>
+            <h4>Update article</h4>
         </div>
         <div>
-            <form action = "{%  url 'articleapp:create' %}" method ="post" enctype="multipart/form-data">
+            <form action = "{%  url 'articleapp:update' pk=target_article.pk %}" method ="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <div class = "m-5"></div>
@@ -16,8 +16,5 @@
             </form>
         </div>
     </div>
-
-
-
 
 {% endblock %}
