--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -6,7 +6,7 @@
             <img src = "{{ target_user.profile.image.url }}"
                  class="profile_image m-4"
                  alt="profile image">
-            <h2 class = "NMS_B">
+            <h2 class = "NNS_B">
                 {{ target_user.profile.nickname }}
                     {% if target_user == user %}
                     <a href = "{% url 'profileapp:update' pk=target_user.profile.pk %}"
