--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -55,9 +55,9 @@
 
     </div>
 
-
     <script src = "{% static 'js/magicgreed.js' %}"></script>
 
+    {% include 'snippets/pagination.html' %}
 
     <div class = "text-center">
         <a href="{% url 'articleapp:create' %}"
