--- a/templates/snippets/pagination.html
+++ b/templates/snippets/pagination.html
@@ -6,7 +6,7 @@
             </a>
         {% endif %}
             <a href="#"
-                class = "btn btn-dark rounded-pill">
+                class = "btn btn-dark rounded-pill NNS_B">
                 {{ page_obj.number }}
             </a>
         {% if page_obj.has_next %}
