8/9 make commentapp(createview, article/detail + comment)

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -33,6 +33,12 @@
                 </a>
             {% endif %}
             </div>
+
+            <hr>
+
+            <div class = 'text-center my-4'>
+                {% include 'commentapp/create.html' %}
+            </div>
         </div>
 
     </div>
