--- a/static/base.css
+++ b/static/base.css
@@ -59,3 +59,12 @@
     text-align: left;
     margin: 2rem;
 }
+
+.comment_box{
+    text-align: left;
+    border: solid;
+    border-color: #9A53EAFF;
+    border-radius:1rem;
+    padding: 1rem;
+    margin: 1rem;
+}
