8/9 comment (login decorator)

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -46,7 +46,7 @@
                         </div>
                         <div>
                             <p>
-                                {{ commment.content }}
+                                {{ comment.content }}
                             </p>
                         </div>
                     </div>
