--- a/commentapp/templates/commentapp/delete.html
+++ b/commentapp/templates/commentapp/delete.html
@@ -6,7 +6,7 @@
             <h4>Delete Comment</h4>
         </div>
         <div>
-            <form action = "{%  url 'commentapp:delete' pk=target_user.pk %}" method ="post">
+            <form action = "{%  url 'commentapp:delete' pk=target_comment.pk %}" method ="post">
                 {% csrf_token %}
                 <div class = "m-5"></div>
                 <input type = "submit"
