--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -4,9 +4,14 @@
 {% block content %}
 
 <style>
+    .container{
+        padding: 0;
+        margin: 0 auto;
+    }
 
     .container div {
-      width: 280px;
+      width: 45%;
+        max-width : 200px;
       background-color: antiquewhite;
       display: flex;
       justify-content: center;
@@ -22,6 +27,8 @@
 
 
 </style>
+
+    <div class = "container my-4">
 
         {% for article in article_list %}
 
@@ -49,5 +56,6 @@
             Create Article
         </a>
     </div>
+
 {% endblock %}
 
