--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="text-center mw-500 m-auto">
+    <div class="text-center m-auto">
         <div class="m-5">
             <img src = "{{ target_project.image.url }}"
                  class="profile_image m-4"
