--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,6 @@
 
     <div class = "Engineering_header_2">
         {% if not user.is_authenticated%}  <!--로그인 했을시에는 로그아웃,-->
-
         <span>
             <a href = "{% url 'accountapp:login' %}">
                 Log in
@@ -20,6 +19,16 @@
         </span>
 
         {% else %}
+        <span>
+            <a href = "{% url 'articleapp:list' %}">
+                Articles
+            </a>
+        </span>
+        <span>
+            <a href = "{% url 'projectapp:list' %}">
+                Projects
+            </a>
+        </span>
         <span>
             <a href = "{% url 'accountapp:detail' pk=user.pk %}">
                 My page
