8/19 connect article - project(with article modle migration)

--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -36,7 +36,7 @@
                 <a href = "{% url 'projectapp:detail' pk=project.pk %}">
                     <img src = "{{ project.image.url }}" alt="">
                 </a>
-                <span>{{ project.name }}</span>
+                <span class = 'm-2 NMS-B'>{{ project.name | truncatechars:10 }}</span>
             </div>
         {% endfor %}
 
