--- a/templates/snippets/list_fragment.html
+++ b/templates/snippets/list_fragment.html
@@ -10,7 +10,9 @@
     }
 
     .container div {
-        box-shadow: 0 0 .5rem grey;
+      width: 45%;
+        max-width : 200px;
+      background-color: antiquewhite;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -19,9 +21,7 @@
     }
 
     .container img{
-        width: 7rem;
-        height: 7rem;
-        object-fit: cover;
+        width: 100%;
         border-radius: 1rem;
     }
 
@@ -30,13 +30,13 @@
 
     <div class = "container my-4">
 
-        {% for project in project_list %}
+        {% for article in article_list %}
 
             <div style="text-align: center">
-                <a href = "{% url 'projectapp:detail' pk=project.pk %}">
-                    <img src = "{{ project.image.url }}" alt="">
+                <a href = "{% url 'articleapp:detail' pk=article.pk %}">
+                    <img src = "{{ article.image.url }}" alt="">
                 </a>
-                <span class = 'm-2 NMS-B'>{{ project.name | truncatechars:10 }}</span>
+                <span class="'m-2 NNS_B">{{ article.title }}</span>
             </div>
         {% endfor %}
 
@@ -47,12 +47,15 @@
     {% include 'snippets/pagination.html' %}
 
     <div class = "text-center">
-        <a href="{% url 'projectapp:create' %}"
+        <a href="{% url 'articleapp:create' %}"
+           class = 'btn btn-dark rounded-pill material-icons'>
+            brush
+        </a>
+        <a href="{% url 'articleapp:create' %}"
            class = 'btn btn-outline-dark rounded-pill' px-5>
-            Create project
+            Create Article
         </a>
     </div>
-
 
 {% endblock %}
 
