--- a/templates/header.html
+++ b/templates/header.html
@@ -30,6 +30,11 @@
             </a>
         </span>
         <span>
+            <a href = "{% url 'subscribeapp:list' %}">
+                Subscription
+            </a>
+        </span>
+        <span>
             <a href = "{% url 'accountapp:detail' pk=user.pk %}">
                 My page
             </a>
