--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -27,12 +27,12 @@
             <img src="{{ target_article.image.url }}"
                  class='article_image'
                  alt="">
-            <div class = 'article content my-2'>
-                {{ target_article.content }}
+            <div class = 'article content'>
+                {{ target_article.content | safe }}
             </div>
 
-            <div>
             {% if target_article.writer == user %}
+            <div>
                 <a href = "{% url 'articleapp:update' pk=target_article.pk %}"
                     class = "btn btn-success rounded-pill px-5" >
                     Update
@@ -41,39 +41,39 @@
                     class = "btn btn-danger rounded-pill px-5" >
                     Delete
                 </a>
-            {% endif %}
             </div>
+            {% endif %}
+        </div>
 
             <hr>
 
-            <div class = 'text-center my-4'>
+        <div class = 'text-center my-4'>
 
-                {% for comment in target_article.comment.all %}
-                    <div class = 'comment_box'>
-                        <div>
-                            <span class = "NNS_B" style="font-size: 1.3rem">{{ comment.writer.profile.nickname }}</span>
-                            <span>{{ comment.created_at }}</span>
-                        </div>
-                        <div>
-                            <p>
-                                {{ comment.content }}
-                            </p>
-                        </div>
-                        {%  if comment.writer == user %}
+            {% for comment in target_article.comment.all %}
+                <div class = 'comment_box'>
+                    <div>
+                        <span class = "NNS_B" style="font-size: 1.3rem">{{ comment.writer.profile.nickname }}</span>
+                        <span>{{ comment.created_at }}</span>
+                    </div>
+                    <div>
+                        <p>
+                            {{ comment.content }}
+                        </p>
+                    </div>
+                    {%  if comment.writer == user %}
                         <div style="text-align: right">
                             <a href="{% url 'commentapp:delete' pk=comment.pk %}"
                             class = "btn btn-danger rounded-pill px-5">
                             Delete
                             </a>
-                        {% endif %}
                         </div>
+                        {% endif %}
                     </div>
 
                 {% endfor %}
 
                 {% include 'commentapp/create.html' %}
-            </div>
         </div>
-
     </div>
+
 {% endblock %}
