--- a/templates/header.html
+++ b/templates/header.html
@@ -1,23 +1,27 @@
 <div class = "Engineering_header_all">
 
     <div class = "Engineering_header_1">
-        <h1>Self Engineering</h1>
+        <h1>
+            <a href="{% url 'home' %}">
+                Self Engineering
+            </a>
+        </h1>
     </div>
 
 
     <div class = "Engineering_header_2">
-        <span>
+        <span class = 'mx-2'>
             <a href = "{% url 'articleapp:list' %}">
                 Articles
             </a>
         </span>
-        <span>
+        <span class = 'mx-2'>
             <a href = "{% url 'projectapp:list' %}">
                 Projects
             </a>
         </span>
         {% if user.is_authenticated %}
-        <span>
+        <span class = 'mx-2'>
             <a href = "{% url 'subscribeapp:list' %}">
                 Subscription
             </a>
@@ -26,23 +30,23 @@
 
 
         {% if not user.is_authenticated%}  <!--로그인 했을시에는 로그아웃,-->
-        <span>
+        <span class = 'mx-2'>
             <a href = "{% url 'accountapp:login' %}">
                 Log in
             </a>
         </span>
-        <span>
+        <span class = 'mx-2'>
             <a href = "{% url 'accountapp:create' %}">
                 Sign up
             </a>
         </span>
         {% else %}
-        <span>
+        <span class = 'mx-2'>
             <a href = "{% url 'accountapp:detail' pk=user.pk %}">
                 My page
             </a>
         </span>
-        <span>
+        <span class = 'mx-2'>
             <a href = "{% url 'accountapp:logout' %}">
                 Logout
             </a>
